--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -2,8 +2,8 @@
 <div class="header">
   <h1><img src="/static/images/blog.png"> SPACE BLOG</h1>
     <a href="/">MAIN PAGE</a>
-    <a href="/register">SIGN UP</a>
-    <a href="/login">LOGIN</a>
-    <a href="/logout">LOGOUT</a>
-    <a href="/add_post">ADD POST</a>
+    <a href="/register/">SIGN UP</a>
+    <a href="/login/">LOGIN</a>
+    <a href="/logout/">LOGOUT</a>
+    <a href="/add_post/">ADD POST</a>
 </div>
